
Chris Schoeneman <crs23@bigfoot.com> pointed out that Eterm didn't get
keypresses if another app (like synergy) decided to listen for its
events.  This should correct that behavior.
----------------------------------------------------------------------
Mon Jun 28 12:34:36 2004                        Michael Jennings (mej)

Cleaning up some warnings.
----------------------------------------------------------------------
Wed Jul 14 16:16:48 2004                        Michael Jennings (mej)

Applied patch from Kim Woelders <kim@woelders.dk> to fix setting of
_NET_WM_ICON property.

Fixed a couple warnings.
----------------------------------------------------------------------
Fri Jul 16 17:59:48 2004                        Michael Jennings (mej)

If $LANG refers to a UTF-8 or similar locale, remove that part.  In
other words, en_US.utf8 becomes en_US instead.
----------------------------------------------------------------------
Fri Jul 23 12:21:25 2004                        Michael Jennings (mej)

Kirby Kuehl <vacuum@technotronic.com> pointed out some portability
issues.  These should now be fixed.
----------------------------------------------------------------------
Fri Jul 23 12:27:18 2004                        Michael Jennings (mej)

Oops, missed one. :(
----------------------------------------------------------------------
Wed Nov  3 18:17:52 2004                        Michael Jennings (mej)

Small patch for building against libast 0.6.1.

Fixed compile error when enabling OFFIX_DND support pointed out by JG
Miller <miller@yoyo.org>.
----------------------------------------------------------------------
Sun Nov  7 15:37:43 2004                        Michael Jennings (mej)

Fixed minor typo.
----------------------------------------------------------------------
Tue Dec 14 17:13:02 2004                        Michael Jennings (mej)

0.9.3 release
----------------------------------------------------------------------