@@ -103,6 +103,7 @@ enum {
   PROP_DND_PROTOCOL,
   PROP_DND_SELECTION,
   PROP_EWMH_ICON,
+  PROP_EWMH_OPACITY,
   NUM_PROPS
 };
 
